add home component, club details component, start edit club component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
+<!-- <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -21,8 +21,12 @@
       </ul>
     </ul>
   </div>
-</nav>
+</nav> -->
 
 <div class="jumbotron top-header">
   <h1>Boys and Girls Club</h1>
+</div>
+
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
