edit and update clubs

--- a/src/app/club-details/club-details.component.html
+++ b/src/app/club-details/club-details.component.html
@@ -15,7 +15,8 @@
               <p class="card-text number"><small class="text-muted"><strong>Weekend Hours:</strong> {{(selectedClub | async).weekendHours}}</small></p>
               <p class="card-text number"><small class="text-muted"><strong>Summer Hours:</strong> {{(selectedClub | async).summerHours}}</small></p>
               <p class="card-text number"><small class="text-muted"><strong>Weekend Hours:</strong> {{(selectedClub | async).mealsProvided}}</small></p>
-              <p class="card-text number"><small class="text-muted"><strong>Weekend Hourse:</strong> {{(selectedClub | async).teenCenter}}</small></p>
+              <p class="card-text number"><small class="text-muted"><strong>Weekend Hours:</strong> {{(selectedClub | async).teenCenter}}</small></p>
+              <a class="btn btn-info" href="{{(selectedClub | async).website}}">Website</a>
             </div>
           </div>
         </div>
