--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,19 +9,19 @@
         <a class="nav-link" routerLink ="">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="favorited">Favorited</a>
+        <a class="nav-link" routerLink="about">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="admin">Admin</a>
       </li>
       <ul class="nav navbar-nav">
         <li class="nav-item account-header navbar-right">
-          <a class="nav-link" routerLink = "add-project">Add Project</a>
+          <a class="nav-link" routerLink = "add-club">Add Club</a>
         </li>
       </ul>
     </ul>
   </div>
-</nav> -->
+</nav>
 
 <div class="jumbotron top-header">
   <h1>Boys and Girls Club</h1>
