--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,8 @@
   <option value="Expensive">Expensive</option>
   <option value="Inexpensive">Inexpensive</option>
 </select> -->
+
+<h1 class="header-text">Boys and Girls Club in the Seattle Area</h1>
 <div class="branch-list">
   <div class="card-deck">
     <div class="card" *ngFor = "let club of clubs | async">
