--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,19 @@
   width: 100%;
   height: 200px;
 }
+.jumbotron {
+  background-image: url("https://veriscreen.net/wp-content/uploads/2016/08/BGC02.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  background-attachment: fixed;
+}
+.jumbotron h1 {
+  padding: 13%;
+  text-align: center;
+  font-size: 40px;
+  letter-spacing: 3px;
+  color: #ffffff;
+  text-shadow: 2px 2px #000000;
+}
