add 'add-club' component html

--- a/src/app/add-club/add-club.component.html
+++ b/src/app/add-club/add-club.component.html
@@ -20,7 +20,7 @@
 <input #image type="text">
 <br>
 
-<!-- //use a select box
+//use a select box
 <label>Club weekend hours available:</label>
 <input #weekendHours type="text" placeholder="true or false">
 <br>
@@ -35,7 +35,7 @@
 
 <label>Club teen center available:</label>
 <input #teenCenter type="text">
-<br> -->
+<br>
 
 <label>Club website (URL):</label>
 <input #website type="text">
