work on adding new club

--- a/src/app/add-club/add-club.component.html
+++ b/src/app/add-club/add-club.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<!-- <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Add New Club to Manage</h3>
   </div>
@@ -81,4 +81,4 @@
 <h3>Club List</h3>
 <div>
   <app-home></app-home>
-</div>
+</div> -->
