--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,11 @@
-<select (change)="onGoalChange($event.target.value)">
+<!-- <select (change)="onGoalChange($event.target.value)">
   <option value="allClub" selected="selected">All Clubs</option>
   <option value="weekendHours">Weekend Hours Available</option>
   <option value="summerHours">Summer Hours Available</option>
   <option value="summerHours">Summer Hours Available</option>
   <option value="mealsProvided">Meals Provided</option>
   <option value="teenCenter">Teen Center Available</option>
-</select>
+</select> -->
 
 <h1 class="header-text">Boys and Girls Club in the Seattle Area</h1>
 <div class="branch-list">
