add new-club to admin

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -73,7 +73,7 @@
       </div>
 
 
-      <button (click)="addClub(newName.value, newAddress.value, newCity.value, newNumber.value, newImage.value, newWeekendHours.value, newSummerHours.value, newMealsProvided.value, newTeenCenter.value, newWebsite.value); newName.value=''; newAddress.value=''; newCity.value=''; newNumber.value=''; newImage.value='';  newWebsite.value=''">Add</button>
+      <button (click)="addClub(newName.value, newAddress.value, newCity.value, newNumber.value, newImage.value, newWeekendHours.value, newSummerHours.value, newMealsProvided.value, newTeenCenter.value, newWebsite.value);">Add</button>
     </div>
   </div>
 </div>
